<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/tv_directory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="14sp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="4dp"
        android:fontFamily="@font/px437_dtk_bios"
        android:text="@string/directory"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:background="@drawable/customborder"
        android:layout_margin="16dp"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/lists_recyclerview"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp"
        />

    <TextView
        android:id="@+id/tv_current_playing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="14sp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="4dp"
        android:fontFamily="@font/px437_dtk_bios"
        android:text="@string/currently_playing"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/btn_skip_previous"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/ic_round_skip_previous_24" />

        <Button
            android:id="@+id/btn_pause"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/ic_round_pause_24" />

        <Button
            android:id="@+id/btn_play"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorAccent"
            android:fontFamily="@font/px437_dtk_bios"
            android:text="@string/Play"
            android:textColor="#030914" />

        <Button
            android:id="@+id/btn_stop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/ic_round_stop_24" />

        <Button
            android:id="@+id/btn_skip_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/ic_round_skip_next_24" />
    </LinearLayout>


</LinearLayout>